--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>About</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Montserrat:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
