--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>DashPoint AFH</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Montserrat:wght@200&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
@@ -79,6 +80,24 @@
             </div>
 
         </div>
+
+        <footer>
+            <div class="footer-wrapper">
+                <h3>Hello</h3>
+                <p>This is my footer. Welcome my first website.</p>
+                <ul class= "socials">
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="#" class="fa fa-snapchat"></a></li>
+                    <li><a href="#" class="fa fa-google"></a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>copyright &copy;2020 Dash-Point. designed by <span>Takele LLC</span></p>
+            </div>
+
+        </footer>
     </body>
     <script>
         const imageItems = document.querySelectorAll('.image-item-wrapper')
