added new photos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="image-items-wrapper">
 
                     <div class="image-item-wrapper">
-                        <div class="images-img-background" style="background-image:url(img/DSC01186.JPG)"></div>
+                        <div class="images-img-background" style="background-image:url(img/IMG_1356.jpeg)"></div>
                         <div class="img-text-wrapper">
                             
                             <div class="subtitle">
@@ -51,7 +51,7 @@
                 <div class="image-items-wrapper">
 
                     <div class="image-item-wrapper">
-                        <div class="images-img-background" style="background-image:url(img/DSC01229.JPG)"></div>
+                        <div class="images-img-background" style="background-image:url(img/IMG_1345.jpeg)"></div>
                         <div class="img-text-wrapper">
                             
                             <div class="subtitle">
@@ -67,7 +67,7 @@
                 <div class="image-items-wrapper">
 
                     <div class="image-item-wrapper">
-                        <div class="images-img-background" style="background-image:url(img/DSC01384.JPG)"></div>
+                        <div class="images-img-background" style="background-image:url(img/IMG_1413.jpeg)"></div>
                         <div class="img-text-wrapper">
 
                             <div class="subtitle">
